--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Landing Page -->
         <div id="landing-page" class="screen active">
             <div class="logo-container">
-                <img src="Logo https://i.postimg.cc/6pJKgnDr/Screenshot-2025-11-12-15-18-08-88-40deb401b9ffe8e1df2f1cc5ba480b12.jpg">
+                <img src="https://i.postimg.cc/6pJKgnDr/Screenshot-2025-11-12-15-18-08-88-40deb401b9ffe8e1df2f1cc5ba480b12.jpg" alt="OpenMind Logo" id="logo">
             </div>
             <h1>OpenMind Hidden Words Challenge</h1>
             <p>Find hidden words related to mental health and mindfulness</p>
